<resources>
    <string name="app_name" translatable="false">LITest</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="app_font" translatable="false">fonts/DroidSansMono.ttf</string>
    <string name="loading">Loading</string>
    <string name="invalid_result">Invalid result</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>

    <!-- Login -->
    <string name="title_activity_login">Login</string>
    <string name="mail_label" translatable="false">Email</string>
    <string name="pass_label">Password</string>
    <string name="login_label">Login</string>
    <string name="signup_label">Sign up</string>

    <string name="wrong_mail_pass">Wrong login or password</string>
    <string name="no_connection">No connection</string>
    <string name="error_loading_data">Error loading data</string>

    <!-- Signup -->

    <string name="title_activity_signup">Sign up</string>
    <string name="name_label">Name</string>
    <string name="birth_label">Birth date</string>
    <string name="phone_label">Phone</string>
    <string name="title_activity_choose_test">ChooseTestActivity</string>
    <string name="title_activity_test" translatable="false">TestActivity</string>
    <string name="title_activity_litest" translatable="false">LITest</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="reg_not_ok">Something went wrong</string>
    

    <!-- Main -->

    <string name="contest_pos" translatable="false">contest_pos</string>
    <string name="test_pos" translatable="false">test_pos</string>
    <string name="quest" translatable="false">quest</string>
    <string name="action_send">Send</string>
    <string name="title_activity_answer">Answer</string>
    <string name="ans_text">Your result</string>
    <string name="tests">Choose test</string>

</resources>
